--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@
 :experimental:
 :hide-uri-scheme:
 // Project URIs:
-:uri-project: https://gitlab.com/antora/antora-ui-default
+:uri-project: https://github.com/aerogear/antora-ui/
 :uri-preview: https://antora.gitlab.io/antora-ui-default
 :uri-ci-pipelines: {uri-project}/pipelines
 :img-ci-status: {uri-project}/badges/master/pipeline.svg
@@ -18,19 +18,16 @@
 :uri-nvm-install: {uri-nvm}#installation
 :uri-yarn: https://yarnpkg.com
 
-image:{img-ci-status}[CI Status (GitLab CI), link={uri-ci-pipelines}]
-
-This project is an archetype that demonstrates how to produce a UI bundle for use in a documentation site generated with {uri-antora}[Antora].
-You can see a preview of the default UI at {uri-preview}.
+Based on https://gitlab.com/antora/antora-ui-default
 
 == Use the Default UI
 
-If you want to use the default UI for your Antora-generated site, add the following UI configuration to your playbook:
+If you want to use this UI for your Antora-generated site, add the following UI configuration to your playbook:
 
 [source,yaml,subs=attributes+]
 ----
 ui:
-  bundle: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
+  bundle: https://github.com/aerogear/antora-ui/raw/master/build/ui-bundle.zip
 ----
 
 Read on to learn how to use your own build of the default UI.
